Wrap amount in a position relative div because the parent which is the position relative parent will become fixed when drag and dropping

--- a/src/app/pages/items/components/item/item.component.scss
+++ b/src/app/pages/items/components/item/item.component.scss
@@ -13,6 +13,7 @@
 
 .icon {
   --size: calc(var(--spritesheet-scaled-size) * var(--individual-scale));
+  --factor: calc(var(--individual-scale) * var(--spritesheet-scale-factor));
   height: var(--size);
   width: var(--size);
   background-image: url('~src/assets/item-spritesheet.png');
